--- a/index.html
+++ b/index.html
@@ -1,1 +1,229 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Laila Mansour | HCI Workshops</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
 
+    body {
+      background-color: #e7f5e9;
+      color: #1d1d1f;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .page {
+      max-width: 1200px;
+      margin: 40px auto;
+      padding: 0 20px 40px;
+    }
+
+    .layout {
+      display: flex;
+      gap: 32px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+
+    .profile-card {
+      background-color: #f6fff8;
+      border-radius: 24px;
+      padding: 32px 28px;
+      width: 260px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
+      text-align: center;
+    }
+
+    .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin: 0 auto 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #7bc47f;
+      color: white;
+      font-size: 40px;
+      font-weight: 600;
+    }
+
+    .profile-name {
+      font-size: 24px;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .profile-role {
+      font-size: 15px;
+      color: #555;
+    }
+
+    .workshops-section {
+      flex: 1;
+      min-width: 280px;
+    }
+
+    .workshops-section h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+
+    .workshops-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 16px 20px;
+    }
+
+    .workshop-card {
+      background-color: #f6fff8;
+      border-radius: 18px;
+      padding: 18px 20px 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    }
+
+    .workshop-card h2 {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+
+    .workshop-card p {
+      font-size: 14px;
+      line-height: 1.4;
+      margin-bottom: 4px;
+    }
+
+    .label {
+      font-weight: 600;
+    }
+
+    .workshop-card a {
+      color: #1d6f42;
+      text-decoration: underline;
+    }
+
+    .workshop-card a:hover {
+      text-decoration: none;
+    }
+
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #444;
+    }
+
+    footer a {
+      color: #1d6f42;
+    }
+  </style>
+</head>
+<body>
+  <div class="page">
+    <div class="layout">
+      <!-- LEFT PROFILE CARD -->
+      <section class="profile-card">
+        <div class="avatar">LM</div>
+        <div class="profile-name">Laila Mansour</div>
+        <div class="profile-role">HCI Student</div>
+      </section>
+
+      <!-- RIGHT WORKSHOPS GRID -->
+      <section class="workshops-section">
+        <h1>Workshops</h1>
+
+        <div class="workshops-grid">
+          <!-- Workshop 1 -->
+          <article class="workshop-card">
+            <h2>Workshop 1</h2>
+            <p><span class="label">Description: </span>This is a link to my first workshop
+              submission, where I created one HTML page and added it to the repository.</p>
+            <p><span class="label">Link to submission: </span>
+              <!-- TODO: replace # with your real URL -->
+              <a href="#" target="_blank">Workshop 1</a>
+            </p>
+          </article>
+
+          <!-- Workshop 2 -->
+          <article class="workshop-card">
+            <h2>Workshop 2</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+
+          <!-- Workshop 3 -->
+          <article class="workshop-card">
+            <h2>Workshop 3</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+
+          <!-- Workshop 4 -->
+          <article class="workshop-card">
+            <h2>Workshop 4</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+
+          <!-- Workshop 5 -->
+          <article class="workshop-card">
+            <h2>Workshop 5</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+
+          <!-- Workshop 6 -->
+          <article class="workshop-card">
+            <h2>Workshop 6</h2>
+            <p><span class="label">Description: </span>UX design / journey map for Dan.</p>
+            <p><span class="label">Link to submission: </span>
+              <!-- Example: Figma link -->
+              <a href="#" target="_blank">Journey map (Figma)</a>
+            </p>
+          </article>
+
+          <!-- Workshop 7 -->
+          <article class="workshop-card">
+            <h2>Workshop 7</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+
+          <!-- Workshop 8 -->
+          <article class="workshop-card">
+            <h2>Workshop 8</h2>
+            <p><span class="label">Description: </span>Short description or key outcomes.</p>
+            <p><span class="label">Link to submission: </span>
+              <a href="#" target="_blank">Link here</a>
+            </p>
+          </article>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+      Contact me at
+      <!-- TODO: change to your real email -->
+      <a href="mailto:your.email@example.com">your.email@example.com</a>
+    </footer>
+  </div>
+</body>
+</html>
