Update Workshop 4 description and link

--- a/index.html
+++ b/index.html
@@ -362,11 +362,13 @@
             <h2>Workshop 4</h2>
             <p>
               <span class="label">Description: </span>
-              Short description or key outcomes of Workshop 4 go here.
+              Extended Goodreads redesign work, focusing on evaluation and iteration.
             </p>
-            <a class="pill-link" href="#" target="_blank">
+            <a class="pill-link"
+               href="https://www.figma.com/design/6fiuWXrTXkoMcTL44Tgeuo/GoodReads-Redesign?node-id=1-2&p=f&t=mndIAPMFaZdCsB0k-0"
+               target="_blank">
               <span class="icon">↗</span>
-              <span>View submission</span>
+              <span>Open Workshop 4 (Figma)</span>
             </a>
           </article>
 
@@ -423,8 +425,7 @@
 
     <footer>
       Contact me at
-      <!-- TODO: change to your real email -->
-      <a href="mailto:your.email@example.com">your.email@example.com</a>
+      <a href="mailto:l.mansour@lancaster.ac.uk">l.mansour@lancaster.ac.uk</a>
     </footer>
   </div>
 </body>
