--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     body {
       min-height: 100vh;
-      background: radial-gradient(circle at top left, #ffe1f2 0, #ffeaf7 30%, #ffeefc 55%, #ffe1f0 85%);
+      background:
+        radial-gradient(circle at top left, #ffe0f2 0, #ffeaf7 30%, #fff0fb 55%, #ffe1f0 85%);
       color: #27222a;
       display: flex;
       flex-direction: column;
@@ -28,17 +29,25 @@
 
     .page {
       max-width: 1200px;
-      margin: 40px auto 32px;
+      margin: 36px auto 32px;
       padding: 0 22px 40px;
     }
 
     .page-header {
       margin-bottom: 10px;
       font-size: 13px;
-      letter-spacing: 0.12em;
+      letter-spacing: 0.16em;
       text-transform: uppercase;
       color: #b66c9c;
       font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .page-header::after {
+      content: "✿";
+      font-size: 14px;
     }
 
     .layout {
@@ -51,13 +60,13 @@
     /* PROFILE CARD */
 
     .profile-card {
-      background: linear-gradient(145deg, #fff6fb, #ffe5f2);
-      border-radius: 26px;
+      background: radial-gradient(circle at top, #fff9fd 0, #ffe7f4 55%, #ffd8ef 100%);
+      border-radius: 30px;
       padding: 32px 26px 26px;
-      width: 270px;
+      width: 280px;
       box-shadow:
-        0 18px 40px rgba(204, 97, 149, 0.2),
-        0 0 0 1px rgba(255, 255, 255, 0.7);
+        0 22px 50px rgba(204, 97, 149, 0.23),
+        0 0 0 1px rgba(255, 255, 255, 0.8);
       text-align: center;
       position: relative;
       overflow: hidden;
@@ -66,9 +75,28 @@
     .profile-card::before {
       content: "";
       position: absolute;
-      inset: -40px;
-      background: radial-gradient(circle at top, rgba(255, 255, 255, 0.65), transparent 60%);
-      opacity: 0.8;
+      width: 140px;
+      height: 140px;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.7);
+      top: -40px;
+      left: -40px;
+      filter: blur(2px);
+      opacity: 0.7;
+      pointer-events: none;
+    }
+
+    .profile-card::after {
+      content: "";
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      border-radius: 999px;
+      background: rgba(255, 203, 230, 0.9);
+      bottom: -60px;
+      right: -40px;
+      filter: blur(4px);
+      opacity: 0.6;
       pointer-events: none;
     }
 
@@ -84,7 +112,14 @@
       color: white;
       font-size: 44px;
       font-weight: 700;
-      box-shadow: 0 14px 26px rgba(241, 92, 152, 0.45);
+      box-shadow: 0 18px 28px rgba(241, 92, 152, 0.45);
+      transform: translateY(0);
+      transition: transform 0.35s ease-out, box-shadow 0.35s ease-out;
+    }
+
+    .profile-card:hover .avatar {
+      transform: translateY(-4px);
+      box-shadow: 0 22px 36px rgba(241, 92, 152, 0.55);
     }
 
     .profile-name {
@@ -104,13 +139,14 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      padding: 6px 12px;
+      padding: 6px 14px;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.96);
       color: #b3006b;
       font-size: 12px;
       font-weight: 500;
       margin-bottom: 10px;
+      box-shadow: 0 6px 14px rgba(204, 97, 149, 0.18);
     }
 
     .dot {
@@ -124,7 +160,7 @@
     .profile-note {
       font-size: 13px;
       color: #7d6177;
-      line-height: 1.4;
+      line-height: 1.5;
       margin-top: 6px;
     }
 
@@ -147,6 +183,15 @@
       font-size: 28px;
       font-weight: 700;
       color: #b3006b;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .workshops-title::after {
+      content: "♡";
+      font-size: 18px;
+      color: #ff6fa8;
     }
 
     .workshops-subtitle {
@@ -163,28 +208,38 @@
     /* WORKSHOP CARDS */
 
     .workshop-card {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.98);
+      border-radius: 22px;
       padding: 16px 18px 18px;
       border: 1px solid #ffd6eb;
       box-shadow:
-        0 10px 26px rgba(199, 93, 148, 0.15),
-        0 0 0 1px rgba(255, 255, 255, 0.8);
+        0 12px 30px rgba(199, 93, 148, 0.18),
+        0 0 0 1px rgba(255, 255, 255, 0.9);
       position: relative;
       overflow: hidden;
       transform: translateY(0);
       transition:
-        transform 0.18s ease-out,
-        box-shadow 0.18s ease-out,
-        border-color 0.18s ease-out,
-        background 0.18s ease-out;
+        transform 0.2s ease-out,
+        box-shadow 0.2s ease-out,
+        border-color 0.2s ease-out,
+        background 0.2s ease-out;
+    }
+
+    .workshop-card::before {
+      content: "✧";
+      position: absolute;
+      font-size: 20px;
+      color: rgba(255, 179, 216, 0.6);
+      left: 12px;
+      bottom: 10px;
+      pointer-events: none;
     }
 
     .workshop-card:hover {
       transform: translateY(-4px);
       box-shadow:
-        0 14px 30px rgba(199, 93, 148, 0.22),
-        0 0 0 1px rgba(255, 255, 255, 0.9);
+        0 16px 34px rgba(199, 93, 148, 0.28),
+        0 0 0 1px rgba(255, 255, 255, 1);
       background: #fff7fb;
       border-color: #ffb7de;
     }
@@ -199,6 +254,14 @@
       background: rgba(255, 143, 191, 0.12);
       color: #b3006b;
       font-weight: 500;
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .workshop-tag::before {
+      content: "★";
+      font-size: 11px;
     }
 
     .workshop-card h2 {
@@ -222,8 +285,8 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      margin-top: 6px;
-      padding: 7px 12px;
+      margin-top: 8px;
+      padding: 7px 14px;
       border-radius: 999px;
       background: #ffe3f3;
       color: #b3006b;
