--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Laila Mansour | HCI Workshops</title>
+  <title>Evgeniya Surkova | HCI Workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- cute Google font -->
+  <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -21,8 +21,8 @@
     body {
       min-height: 100vh;
       background:
-        radial-gradient(circle at top left, #ffe0f2 0, #ffeaf7 30%, #fff0fb 55%, #ffe1f0 85%);
-      color: #27222a;
+        radial-gradient(circle at top left, #e0f0ff 0, #e7f3ff 30%, #eef6ff 55%, #ddeeff 85%);
+      color: #152033;
       display: flex;
       flex-direction: column;
     }
@@ -38,7 +38,7 @@
       font-size: 13px;
       letter-spacing: 0.16em;
       text-transform: uppercase;
-      color: #b66c9c;
+      color: #4b6aa3;
       font-weight: 600;
       display: inline-flex;
       align-items: center;
@@ -46,7 +46,7 @@
     }
 
     .page-header::after {
-      content: "✿";
+      content: "✦";
       font-size: 14px;
     }
 
@@ -60,13 +60,13 @@
     /* PROFILE CARD */
 
     .profile-card {
-      background: radial-gradient(circle at top, #fff9fd 0, #ffe7f4 55%, #ffd8ef 100%);
+      background: radial-gradient(circle at top, #f6fbff 0, #e3f0ff 55%, #d4e7ff 100%);
       border-radius: 30px;
       padding: 32px 26px 26px;
       width: 280px;
       box-shadow:
-        0 22px 50px rgba(204, 97, 149, 0.23),
-        0 0 0 1px rgba(255, 255, 255, 0.8);
+        0 22px 50px rgba(52, 102, 181, 0.23),
+        0 0 0 1px rgba(255, 255, 255, 0.9);
       text-align: center;
       position: relative;
       overflow: hidden;
@@ -78,11 +78,11 @@
       width: 140px;
       height: 140px;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.75);
       top: -40px;
       left: -40px;
       filter: blur(2px);
-      opacity: 0.7;
+      opacity: 0.8;
       pointer-events: none;
     }
 
@@ -92,11 +92,11 @@
       width: 120px;
       height: 120px;
       border-radius: 999px;
-      background: rgba(255, 203, 230, 0.9);
+      background: rgba(188, 213, 255, 0.95);
       bottom: -60px;
       right: -40px;
       filter: blur(4px);
-      opacity: 0.6;
+      opacity: 0.7;
       pointer-events: none;
     }
 
@@ -108,30 +108,30 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #ff8fbf, #ff6fa8);
+      background: linear-gradient(135deg, #4f8dff, #2e6dd9);
       color: white;
       font-size: 44px;
       font-weight: 700;
-      box-shadow: 0 18px 28px rgba(241, 92, 152, 0.45);
+      box-shadow: 0 18px 28px rgba(46, 109, 217, 0.45);
       transform: translateY(0);
       transition: transform 0.35s ease-out, box-shadow 0.35s ease-out;
     }
 
     .profile-card:hover .avatar {
       transform: translateY(-4px);
-      box-shadow: 0 22px 36px rgba(241, 92, 152, 0.55);
+      box-shadow: 0 22px 36px rgba(46, 109, 217, 0.55);
     }
 
     .profile-name {
       font-size: 24px;
       font-weight: 700;
       margin-bottom: 4px;
-      color: #3a2335;
+      color: #1a2740;
     }
 
     .profile-role {
       font-size: 14px;
-      color: #7d6177;
+      color: #4a5b7a;
       margin-bottom: 16px;
     }
 
@@ -142,24 +142,24 @@
       padding: 6px 14px;
       border-radius: 999px;
       background: rgba(255, 255, 255, 0.96);
-      color: #b3006b;
+      color: #2050a8;
       font-size: 12px;
       font-weight: 500;
       margin-bottom: 10px;
-      box-shadow: 0 6px 14px rgba(204, 97, 149, 0.18);
+      box-shadow: 0 6px 14px rgba(52, 102, 181, 0.18);
     }
 
     .dot {
       width: 8px;
       height: 8px;
       border-radius: 999px;
-      background: #ff6fa8;
-      box-shadow: 0 0 0 4px rgba(255, 111, 168, 0.25);
+      background: #3f82ff;
+      box-shadow: 0 0 0 4px rgba(63, 130, 255, 0.25);
     }
 
     .profile-note {
       font-size: 13px;
-      color: #7d6177;
+      color: #4a5b7a;
       line-height: 1.5;
       margin-top: 6px;
     }
@@ -182,21 +182,21 @@
     .workshops-title {
       font-size: 28px;
       font-weight: 700;
-      color: #b3006b;
+      color: #2050a8;
       display: inline-flex;
       align-items: center;
       gap: 6px;
     }
 
     .workshops-title::after {
-      content: "♡";
+      content: "✺";
       font-size: 18px;
-      color: #ff6fa8;
+      color: #3f82ff;
     }
 
     .workshops-subtitle {
       font-size: 13px;
-      color: #8c5c7a;
+      color: #5b6f96;
     }
 
     .workshops-grid {
@@ -211,10 +211,10 @@
       background: rgba(255, 255, 255, 0.98);
       border-radius: 22px;
       padding: 16px 18px 18px;
-      border: 1px solid #ffd6eb;
+      border: 1px solid #c8dcff;
       box-shadow:
-        0 12px 30px rgba(199, 93, 148, 0.18),
-        0 0 0 1px rgba(255, 255, 255, 0.9);
+        0 12px 30px rgba(82, 120, 189, 0.18),
+        0 0 0 1px rgba(255, 255, 255, 0.95);
       position: relative;
       overflow: hidden;
       transform: translateY(0);
@@ -229,7 +229,7 @@
       content: "✧";
       position: absolute;
       font-size: 20px;
-      color: rgba(255, 179, 216, 0.6);
+      color: rgba(124, 166, 255, 0.5);
       left: 12px;
       bottom: 10px;
       pointer-events: none;
@@ -238,10 +238,10 @@
     .workshop-card:hover {
       transform: translateY(-4px);
       box-shadow:
-        0 16px 34px rgba(199, 93, 148, 0.28),
+        0 16px 34px rgba(82, 120, 189, 0.28),
         0 0 0 1px rgba(255, 255, 255, 1);
-      background: #fff7fb;
-      border-color: #ffb7de;
+      background: #f5f8ff;
+      border-color: #a9c6ff;
     }
 
     .workshop-tag {
@@ -251,8 +251,8 @@
       font-size: 11px;
       padding: 4px 10px;
       border-radius: 999px;
-      background: rgba(255, 143, 191, 0.12);
-      color: #b3006b;
+      background: rgba(115, 160, 255, 0.12);
+      color: #2050a8;
       font-weight: 500;
       display: inline-flex;
       align-items: center;
@@ -267,14 +267,14 @@
     .workshop-card h2 {
       font-size: 17px;
       margin-bottom: 6px;
-      color: #cc007a;
+      color: #184c9a;
     }
 
     .workshop-card p {
       font-size: 13px;
       line-height: 1.4;
       margin-bottom: 4px;
-      color: #5e4255;
+      color: #354765;
     }
 
     .label {
@@ -288,8 +288,8 @@
       margin-top: 8px;
       padding: 7px 14px;
       border-radius: 999px;
-      background: #ffe3f3;
-      color: #b3006b;
+      background: #ddeaff;
+      color: #1f57b8;
       text-decoration: none;
       font-size: 13px;
       font-weight: 500;
@@ -305,20 +305,20 @@
     }
 
     .pill-link:hover {
-      background: #ffb7de;
+      background: #bcd3ff;
       transform: translateY(-1px);
-      box-shadow: 0 6px 14px rgba(199, 93, 148, 0.35);
+      box-shadow: 0 6px 14px rgba(82, 120, 189, 0.35);
     }
 
     footer {
       margin-top: 32px;
       text-align: center;
       font-size: 13px;
-      color: #6b4b61;
+      color: #4c5d7a;
     }
 
     footer a {
-      color: #b3006b;
+      color: #1f57b8;
       text-decoration: none;
       font-weight: 500;
     }
@@ -349,8 +349,8 @@
     <div class="layout">
       <!-- PROFILE CARD -->
       <section class="profile-card">
-        <div class="avatar">LM</div>
-        <div class="profile-name">Laila Mansour</div>
+        <div class="avatar">ES</div>
+        <div class="profile-name">Evgeniya Surkova</div>
         <div class="profile-role">HCI Student</div>
 
         <div class="profile-badge">
@@ -411,85 +411,4 @@
               <span class="label">Description: </span>
               Goodreads redesign prototype focusing on improved UX.
             </p>
-            <a class="pill-link"
-               href="https://www.figma.com/proto/yCDWI5mEK2Xzkxk8IkXq17/Goodreads-Redesign-%E2%80%93-Laila-Mansour?node-id=1-2"
-               target="_blank">
-              <span class="icon">↗</span>
-              <span>Open Workshop 3 (Figma)</span>
-            </a>
-          </article>
-
-          <!-- Workshop 4 -->
-          <article class="workshop-card">
-            <div class="workshop-tag">Evaluation</div>
-            <h2>Workshop 4</h2>
-            <p>
-              <span class="label">Description: </span>
-              Extended Goodreads redesign work, focusing on evaluation and iteration.
-            </p>
-            <a class="pill-link"
-               href="https://www.figma.com/design/6fiuWXrTXkoMcTL44Tgeuo/GoodReads-Redesign?node-id=1-2&p=f&t=mndIAPMFaZdCsB0k-0"
-               target="_blank">
-              <span class="icon">↗</span>
-              <span>Open Workshop 4 (Figma)</span>
-            </a>
-          </article>
-
-          <!-- Workshop 5 -->
-          <article class="workshop-card">
-            <div class="workshop-tag">HTA</div>
-            <h2>Workshop 5</h2>
-            <p>
-              <span class="label">Description: </span>
-              Hierarchical Task Analysis and refined requirements for the cinema app.
-            </p>
-            <a class="pill-link"
-               href="Workshop%205%20final%20sub.pdf"
-               target="_blank">
-              <span class="icon">↗</span>
-              <span>Workshop 5 PDF</span>
-            </a>
-          </article>
-
-          <!-- Workshop 6 -->
-          <article class="workshop-card">
-            <div class="workshop-tag">UX map</div>
-            <h2>Workshop 6</h2>
-            <p>
-              <span class="label">Description: </span>
-              UX design and journey map for Dan booking accessible cinema tickets.
-            </p>
-            <a class="pill-link"
-               href="https://www.figma.com/design/EO4mI0POC7leLDDDK6Pgrz/Untitled?t=jBwvtSMb7NBncesC-0"
-               target="_blank">
-              <span class="icon">↗</span>
-              <span>Journey map (Figma)</span>
-            </a>
-          </article>
-
-          <!-- Workshop 7 -->
-          <article class="workshop-card">
-            <div class="workshop-tag">Report</div>
-            <h2>Workshop 7</h2>
-            <p>
-              <span class="label">Description: </span>
-              Final write-up / reflection for the cinema booking project.
-            </p>
-            <a class="pill-link"
-               href="Workshop%207.pdf"
-               target="_blank">
-              <span class="icon">↗</span>
-              <span>Workshop 7 PDF</span>
-            </a>
-          </article>
-        </div>
-      </section>
-    </div>
-
-    <footer>
-      Contact me at
-      <a href="mailto:l.mansour@lancaster.ac.uk">l.mansour@lancaster.ac.uk</a>
-    </footer>
-  </div>
-</body>
-</html>
+            <a class="pill
