Update workshops section with new content
Added descriptions and links for Workshops 4 to 7 in the index.html file.

--- a/index.html
+++ b/index.html
@@ -411,4 +411,85 @@
               <span class="label">Description: </span>
               Goodreads redesign prototype focusing on improved UX.
             </p>
-            <a class="pill
+            <a class="pill-link"
+               href="https://www.figma.com/proto/yCDWI5mEK2Xzkxk8IkXq17/Goodreads-Redesign-%E2%80%93-Laila-Mansour?node-id=1-2"
+               target="_blank">
+              <span class="icon">↗</span>
+              <span>Open Workshop 3 (Figma)</span>
+            </a>
+          </article>
+
+          <!-- Workshop 4 -->
+          <article class="workshop-card">
+            <div class="workshop-tag">Evaluation</div>
+            <h2>Workshop 4</h2>
+            <p>
+              <span class="label">Description: </span>
+              Extended Goodreads redesign work, focusing on evaluation and iteration.
+            </p>
+            <a class="pill-link"
+               href="https://www.figma.com/design/6fiuWXrTXkoMcTL44Tgeuo/GoodReads-Redesign?node-id=1-2&p=f&t=mndIAPMFaZdCsB0k-0"
+               target="_blank">
+              <span class="icon">↗</span>
+              <span>Open Workshop 4 (Figma)</span>
+            </a>
+          </article>
+
+          <!-- Workshop 5 -->
+          <article class="workshop-card">
+            <div class="workshop-tag">HTA</div>
+            <h2>Workshop 5</h2>
+            <p>
+              <span class="label">Description: </span>
+              Hierarchical Task Analysis and refined requirements for the cinema app.
+            </p>
+            <a class="pill-link"
+               href="Workshop%205%20final%20sub.pdf"
+               target="_blank">
+              <span class="icon">↗</span>
+              <span>Workshop 5 PDF</span>
+            </a>
+          </article>
+
+          <!-- Workshop 6 -->
+          <article class="workshop-card">
+            <div class="workshop-tag">UX map</div>
+            <h2>Workshop 6</h2>
+            <p>
+              <span class="label">Description: </span>
+              UX design and journey map for Dan booking accessible cinema tickets.
+            </p>
+            <a class="pill-link"
+               href="https://www.figma.com/design/EO4mI0POC7leLDDDK6Pgrz/Untitled?t=jBwvtSMb7NBncesC-0"
+               target="_blank">
+              <span class="icon">↗</span>
+              <span>Journey map (Figma)</span>
+            </a>
+          </article>
+
+          <!-- Workshop 7 -->
+          <article class="workshop-card">
+            <div class="workshop-tag">Report</div>
+            <h2>Workshop 7</h2>
+            <p>
+              <span class="label">Description: </span>
+              Final write-up / reflection for the cinema booking project.
+            </p>
+            <a class="pill-link"
+               href="Workshop%207.pdf"
+               target="_blank">
+              <span class="icon">↗</span>
+              <span>Workshop 7 PDF</span>
+            </a>
+          </article>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+      Contact me at
+      <a href="mailto:e.surkova@lancaster.ac.uk">e.surkova@lancaster.ac.uk</a>
+    </footer>
+  </div>
+</body>
+</html>
