Update profile name and email in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Evgeniya Surkova | HCI Workshops</title>
+  <title>Abdallah Kassem | HCI Workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google font -->
@@ -350,7 +350,7 @@
       <!-- PROFILE CARD -->
       <section class="profile-card">
         <div class="avatar">ES</div>
-        <div class="profile-name">Evgeniya Surkova</div>
+        <div class="profile-name">Abdallah Kassem</div>
         <div class="profile-role">HCI Student</div>
 
         <div class="profile-badge">
@@ -488,7 +488,7 @@
 
     <footer>
       Contact me at
-      <a href="mailto:e.surkova@lancaster.ac.uk">e.surkova@lancaster.ac.uk</a>
+      <a href="mailto:a.kassem@lancaster.ac.uk">a.kassem@lancaster.ac.uk</a>
     </footer>
   </div>
 </body>
