Update profile name and email in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Abdallah Kassem | HCI Workshops</title>
+  <title>Ada Karaca | HCI Workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google font -->
@@ -350,7 +350,7 @@
       <!-- PROFILE CARD -->
       <section class="profile-card">
         <div class="avatar">ES</div>
-        <div class="profile-name">Abdallah Kassem</div>
+        <div class="profile-name">Ada Karaca</div>
         <div class="profile-role">HCI Student</div>
 
         <div class="profile-badge">
@@ -395,11 +395,9 @@
               <span class="label">Description: </span>
               Portfolio assignment exploration and early UX work in Figma.
             </p>
-            <a class="pill-link"
-               href="https://www.figma.com/design/4nOEGgU6dEuY819lVLjSBW/Laila_Mansour_Portfolio_Assignment?node-id=0-1&p=f&t=RAqWIrq7w7wI7LxO-0"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Open Workshop 2 (Figma)</span>
+              <span>Open Workshop 2</span>
             </a>
           </article>
 
@@ -411,11 +409,9 @@
               <span class="label">Description: </span>
               Goodreads redesign prototype focusing on improved UX.
             </p>
-            <a class="pill-link"
-               href="https://www.figma.com/proto/yCDWI5mEK2Xzkxk8IkXq17/Goodreads-Redesign-%E2%80%93-Laila-Mansour?node-id=1-2"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Open Workshop 3 (Figma)</span>
+              <span>Open Workshop 3</span>
             </a>
           </article>
 
@@ -427,11 +423,9 @@
               <span class="label">Description: </span>
               Extended Goodreads redesign work, focusing on evaluation and iteration.
             </p>
-            <a class="pill-link"
-               href="https://www.figma.com/design/6fiuWXrTXkoMcTL44Tgeuo/GoodReads-Redesign?node-id=1-2&p=f&t=mndIAPMFaZdCsB0k-0"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Open Workshop 4 (Figma)</span>
+              <span>Open Workshop 4</span>
             </a>
           </article>
 
@@ -443,11 +437,9 @@
               <span class="label">Description: </span>
               Hierarchical Task Analysis and refined requirements for the cinema app.
             </p>
-            <a class="pill-link"
-               href="Workshop%205%20final%20sub.pdf"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Workshop 5 PDF</span>
+              <span>Workshop 5</span>
             </a>
           </article>
 
@@ -459,11 +451,9 @@
               <span class="label">Description: </span>
               UX design and journey map for Dan booking accessible cinema tickets.
             </p>
-            <a class="pill-link"
-               href="https://www.figma.com/design/EO4mI0POC7leLDDDK6Pgrz/Untitled?t=jBwvtSMb7NBncesC-0"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Journey map (Figma)</span>
+              <span>Workshop 6</span>
             </a>
           </article>
 
@@ -475,11 +465,9 @@
               <span class="label">Description: </span>
               Final write-up / reflection for the cinema booking project.
             </p>
-            <a class="pill-link"
-               href="Workshop%207.pdf"
-               target="_blank">
+            <a class="pill-link" href="#" target="_blank">
               <span class="icon">↗</span>
-              <span>Workshop 7 PDF</span>
+              <span>Workshop 7</span>
             </a>
           </article>
         </div>
@@ -488,7 +476,7 @@
 
     <footer>
       Contact me at
-      <a href="mailto:a.kassem@lancaster.ac.uk">a.kassem@lancaster.ac.uk</a>
+      <a href="mailto:a.karaca@lancaster.ac.uk">a.karaca@lancaster.ac.uk</a>
     </footer>
   </div>
 </body>
