--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ada Karaca | HCI Workshops</title>
+  <title>Tala Fakhreddine | HCI Workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google font -->
@@ -350,7 +350,7 @@
       <!-- PROFILE CARD -->
       <section class="profile-card">
         <div class="avatar">ES</div>
-        <div class="profile-name">Ada Karaca</div>
+        <div class="profile-name">Tala Fakhreddine</div>
         <div class="profile-role">HCI Student</div>
 
         <div class="profile-badge">
@@ -476,7 +476,7 @@
 
     <footer>
       Contact me at
-      <a href="mailto:a.karaca@lancaster.ac.uk">a.karaca@lancaster.ac.uk</a>
+      <a href="mailto:t.fakhreddine@lancaster.ac.uk">t.fakhreddine@lancaster.ac.uk</a>
     </footer>
   </div>
 </body>
